--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:enableOnBackInvokedCallback="true"
-        android:label="GastRonomIQ"
+        android:label="I'm on the phone"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
