--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   file_picker: ^10.2.0
   audioplayers: ^6.5.0
   flutter_ringtone_player: ^4.0.0+4
+  rename: ^3.1.0
   
   
 
@@ -55,7 +56,7 @@ flutter_launcher_icons:
   android: true
   ios:
     remove_alpha_ios: true
-  image_path: "assets/icons/icon.png"
+  image_path: "assets/icons/app_logo.png"
 
 
 flutter:
