--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   audioplayers: ^6.5.0
   flutter_ringtone_player: ^4.0.0+4
   rename: ^3.1.0
+  change_app_package_name: ^1.5.0
   
   
 
