--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,7 +4,11 @@
     <dict>
         <key>NSAppleMusicUsageDescription</key>
         <string>Explain why your app uses music</string>
-
+        <key>NSAppTransportSecurity</key>
+        <dict>
+            <key>NSAllowsArbitraryLoads</key>
+            <true/>
+        </dict>
         <key>NSPhotoLibraryUsageDescription</key>
         <string>Explain why your app uses photo library</string>
 
