--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   flutter_ringtone_player: ^4.0.0+4
   rename: ^3.1.0
   change_app_package_name: ^1.5.0
+  just_audio: ^0.10.4
+  audio_session: ^0.2.2
+  
   
   
 
@@ -65,3 +68,4 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/sounds/
