--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   just_audio: ^0.10.4
   audio_session: ^0.2.2
   awesome_snackbar_content: ^0.1.6
+  photo_view: ^0.15.0
   
   
   
